[package]
name = "memebot_backend"
version = "0.1.0"
authors = ["imDema <luca.de.martini@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "chrono"] }
dotenv = "0.14"
chrono = "0.4"