[package]
name = "memebot_backend"
version = "0.1.0"
authors = ["imDema <luca.de.martini@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4"
dotenv = "0.14"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"

[profile.release]
lto = true

[[bin]]
name = "memebot_cli"
path = "src/bin/cli.rs"